@@ -4,9 +4,16 @@ use strict;
 use warnings;
 
 use Data::Printer;
+use MARC::Convert::Wikidata::Object::ExternalId;
 use MARC::Convert::Wikidata::Object::Publisher;
 
 my $obj = MARC::Convert::Wikidata::Object::Publisher->new(
+        'external_ids' => [
+                MARC::Convert::Wikidata::Object::ExternalId->new(
+                        'name' => 'nkcr_aut',
+                        'value' => 'ko2002101950',
+                ),
+        ],
         'id' => '000010003',
         'name' => 'Academia',
         'place' => 'Praha',
@@ -16,12 +23,18 @@ p $obj;
 
 # Output:
 # MARC::Convert::Wikidata::Object::Publisher  {
-#     Parents       Mo::Object
-#     public methods (4) : can (UNIVERSAL), DOES (UNIVERSAL), isa (UNIVERSAL), VERSION (UNIVERSAL)
-#     private methods (1) : __ANON__ (Mo::is)
+#     parents: Mo::Object
+#     public methods (2):
+#         BUILD
+#         Mo::utils:
+#             check_required
+#     private methods (0)
 #     internals: {
-#         id      "000010003",
-#         name    "Academia",
-#         place   "Praha"
+#         external_ids   [
+#             [0] MARC::Convert::Wikidata::Object::ExternalId
+#         ],
+#         id             "000010003" (dualvar: 10003),
+#         name           "Academia",
+#         place          "Praha"
 #     }
 # }
