@@ -1,18 +1,17 @@
 use strict;
 use warnings;
 
-use Error::Pure::Utils qw(clean);
-use English;
 use MARC::Convert::Wikidata::Object::ExternalId;
 use MARC::Convert::Wikidata::Object::Publisher;
-use Test::More 'tests' => 4;
+use Test::More 'tests' => 6;
 use Test::NoWarnings;
 
 # Test.
 my $obj = MARC::Convert::Wikidata::Object::Publisher->new(
 	'name' => 'Academia',
 );
-isa_ok($obj, 'MARC::Convert::Wikidata::Object::Publisher');
+my $ret = $obj->external_ids;
+is_deeply($ret, [], 'Get external ids ([] - default).');
 
 # Test.
 $obj = MARC::Convert::Wikidata::Object::Publisher->new(
@@ -26,12 +25,8 @@ $obj = MARC::Convert::Wikidata::Object::Publisher->new(
 	'name' => 'Academia',
 	'place' => 'Praha',
 );
-isa_ok($obj, 'MARC::Convert::Wikidata::Object::Publisher');
-
-# Test.
-eval {
-	MARC::Convert::Wikidata::Object::Publisher->new;
-};
-is($EVAL_ERROR, "Parameter 'name' is required.\n",
-	"Parameter 'name' is required.");
-clean();
+$ret = $obj->external_ids;
+is(@{$ret}, 1, 'Get external ids count (1).');
+isa_ok($ret->[0], 'MARC::Convert::Wikidata::Object::ExternalId');
+is($ret->[0]->name, 'nkcr_aut', 'Get external id name (nkcr_aut).');
+is($ret->[0]->value, 'ko2002101950', 'Get external id value (ko2002101950).');
