@@ -1,4 +1,5 @@
 0.11
+ - Add 'external_ids' parameter to Publisher object.
 
 0.10 2025-03-17T18:19:08+01:00
  - Add 'valid' parameter to ISBN object.
